postgresql-common (134wheezy3) UNRELEASED; urgency=low

  * pg_wrapper: Document that PGHOST overrides PGCLUSTER. (Closes: #697291)
  * pg_wrapper: Skip cluster selection if --host is given on the command line.
    (Closes: #637017) While we are at it, improve --port parsing, too.
  * postgresql-client-common: Add Depends: netbase for getprotobyname() in
    PgCommon.pm. (Closes: #697377)

 -- Christoph Berg <myon@debian.org>  Fri, 04 Jan 2013 13:53:41 +0100

postgresql-common (134wheezy2) unstable; urgency=low

  * debian/supported-versions: Add Debian 7.0 "wheezy" to support 9.1 only.
    This is not a functional change, but avoids the "Unknown Debian release"
    warning.
  * debian/postgresql-common.triggers: Also watch for changes in
    /usr/share/hunspell/; pg_updatedicts handles these as well. Cherry-picked
    from trunk r1217. (Closes: #689994)

 -- Martin Pitt <mpitt@debian.org>  Mon, 05 Nov 2012 08:15:34 +0100

postgresql-common (134wheezy1) unstable; urgency=low

  * debian/control: Switch Vcs-Bzr: to wheezy branch.
  * pg_ctlcluster: Fix log output to stderr if the log file started out being
    empty. Cherry-picked from trunk r1204.
  * pg_buildext: Fix supported-versions not to die when the last version is
    not supported. Cherry-picked from trunk r1199.
  * debian/maintscripts-functions: Only try to remove the tsearch_data
    directory if it already exists. Thanks Peter Palfrader. Cherry-picked from
    trunk r1211. (Closes: #688105)
  * As debian/supported-versions is also used at build-time, add a
    build-dependency on lsb-release for lsb_release to be available. Also,
    print supported versions from debian/rules for easier debugging.
    Cherry-picked from trunk r1206/r1207.

 -- Martin Pitt <mpitt@debian.org>  Wed, 03 Oct 2012 22:30:36 +0200

postgresql-common (134) unstable; urgency=low

  * debian/backport-ppa: Fix syntax error.
  * PgCommon.pm: Drop unconditional import of Socket::IN6ADDR_ANY and only do